uipath-sales/main/default/objects/Template_Mapping__mdt/Template_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Document Type to Conga template Id mappings.</description>
    <label>Template Mapping</label>
    <pluralLabel>Template Mappings</pluralLabel>
</CustomObject>