uipath-sales/main/default/objects/Template_Mapping__mdt/fields/CongaTemplateId__c.field-meta.xml
<CustomField>
    <fullName>CongaTemplateId__c</fullName>
    <label>Conga Template Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>