uipath-sales/main/default/objects/Template_Mapping__mdt/fields/DocumentLanguage__c.field-meta.xml
<CustomField>
    <fullName>DocumentLanguage__c</fullName>
    <label>Document Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>日本語</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>