uipath-sales/main/default/objects/Template_Mapping__mdt/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Alliance Agreement</fullName>
                <default>true</default>
                <label>Academic Alliance Agreement</label>
            </value>
            <value>
                <fullName>Affiliate Adoption Agreement</fullName>
            </value>
            <value>
                <fullName>BAA</fullName>
            </value>
            <value>
                <fullName>BPO版EULA（MA）</fullName>
            </value>
            <value>
                <fullName>BPO版LO</fullName>
            </value>
            <value>
                <fullName>BPO版MSSA</fullName>
            </value>
            <value>
                <fullName>DPA</fullName>
            </value>
            <value>
                <fullName>EAAP Agreement</fullName>
            </value>
            <value>
                <fullName>EAAP Agreement for GSI</fullName>
            </value>
            <value>
                <fullName>EULA Addendum</fullName>
            </value>
            <value>
                <fullName>Federal Resale Addendum</fullName>
            </value>
            <value>
                <fullName>Federal System Integrator Partner Agreement</fullName>
            </value>
            <value>
                <fullName>Global Deal版EULA（MA）</fullName>
            </value>
            <value>
                <fullName>Global Deal版MSSA</fullName>
            </value>
            <value>
                <fullName>License Compliance Notice</fullName>
            </value>
            <value>
                <fullName>MPA Addendum</fullName>
            </value>
            <value>
                <fullName>MPA Indirect Resale + BPO Agreement (CN)</fullName>
            </value>
            <value>
                <fullName>MPA Indirect Resale Only Agreement (CN)</fullName>
            </value>
            <value>
                <fullName>MSSA</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>NDA（相互秘密保持契約）</fullName>
            </value>
            <value>
                <fullName>Partner BPO Only Agreement</fullName>
            </value>
            <value>
                <fullName>Partner Confirmation Letter</fullName>
            </value>
            <value>
                <fullName>Partner Resale + BPO Agreement</fullName>
            </value>
            <value>
                <fullName>Partner Resale Only Agreement</fullName>
            </value>
            <value>
                <fullName>Reverse Reseller</fullName>
            </value>
            <value>
                <fullName>Select One</fullName>
            </value>
            <value>
                <fullName>Teaming Agreement</fullName>
            </value>
            <value>
                <fullName>Technology Alliance Agreement</fullName>
            </value>
            <value>
                <fullName>Technology Alliance Deal Referral Addendum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>